fix: use ubuntu-22.04 for better package compatibility

--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-tauri-armhf:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # ✅ التعديل هنا
 
     steps:
       - name: Checkout Repository
