--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-tauri-armhf:
-    runs-on: ubuntu-22.04  # ✅ التعديل هنا
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout Repository
@@ -26,9 +26,29 @@ jobs:
 
       - name: Install Linux build dependencies
         run: |
+          sudo dpkg --add-architecture armhf
           sudo apt update
-          sudo apt install -y gcc-arm-linux-gnueabihf libwebkit2gtk-4.0-dev \
-          libgtk-3-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev build-essential curl wget file
+          sudo apt install -y \
+            pkg-config \
+            gcc-arm-linux-gnueabihf \
+            libwebkit2gtk-4.0-dev \
+            libgtk-3-dev \
+            libssl-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libglib2.0-dev:armhf \
+            libc6-dev-armhf-cross
+
+      - name: Set up cross-compilation environment variables
+        run: |
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+          echo "PKG_CONFIG_SYSROOT_DIR=/usr/arm-linux-gnueabihf" >> $GITHUB_ENV
+          echo "PKG_CONFIG_LIBDIR=/usr/lib/arm-linux-gnueabihf/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
+          echo "PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig" >> $GITHUB_ENV
 
       - name: Install Tauri CLI
         run: cargo install tauri-cli
