fix: add libsoup-3.0-dev for soup3-sys support

--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -35,6 +35,7 @@ jobs:
             libssl-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
+            libsoup-3.0-dev \
             build-essential \
             curl \
             wget \
