--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -31,6 +31,7 @@ jobs:
             pkg-config \
             gcc-arm-linux-gnueabihf \
             libwebkit2gtk-4.0-dev \
+            libjavascriptcoregtk-4.0-dev \
             libgtk-3-dev \
             libssl-dev \
             libayatana-appindicator3-dev \
