--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -1,4 +1,4 @@
-name: "Build ARMv7 (armhf) for Raspberry Pi Zero W2"
+name: "Build ARMv7 for Raspberry Pi (via Cross Docker Image)"
 
 on:
   push:
@@ -7,64 +7,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-tauri-armhf:
-    runs-on: ubuntu-22.04
+  build:
+    name: Build Tauri App for ARMv7
+    runs-on: ubuntu-latest
+    container:
+      # نستخدم صورة جاهزة تدعم cross-compilation إلى armv7 مع musl
+      image: messense/rust-musl-cross:armv7-musleabihf
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Install Rust with ARM target
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: armv7-unknown-linux-gnueabihf
 
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install Linux build dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y \
-            pkg-config \
-            gcc-arm-linux-gnueabihf \
-            libwebkit2gtk-4.0-dev \
-            libjavascriptcoregtk-4.0-dev \
-            libgtk-3-dev \
-            libssl-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev \
-            libsoup-3.0-dev \
-            build-essential \
-            curl \
-            wget \
-            file
-
-      - name: Set up cross-compilation environment variables
-        run: |
-          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
-
-      - name: Install Tauri CLI
-        run: cargo install tauri-cli
-
-      - name: Configure Cargo for cross-compilation
-        run: |
-          mkdir -p ~/.cargo
-          echo '[target.armv7-unknown-linux-gnueabihf]' >> ~/.cargo/config.toml
-          echo 'linker = "arm-linux-gnueabihf-gcc"' >> ~/.cargo/config.toml
-
       - name: Install dependencies and build frontend
         run: |
           npm install
           npm run build
 
-      - name: Build Tauri app for ARM
-        run: cargo tauri build --target armv7-unknown-linux-gnueabihf
+      - name: Build Tauri App for ARMv7
+        working-directory: src-tauri
+        env:
+          TAURI_ARCH: armv7
+          TAURI_PLATFORM: linux
+          TAURI_FAMILY: unix
+          CARGO_TARGET_ARMV7_UNKNOWN_LINUX_MUSLEABIHF_LINKER: armv7-unknown-linux-musleabihf-gcc
+          # هذا المتغير يخبر build scripts بعدم استخدام pkg-config للـ javascriptcoregtk-4.1
+          JAVASCRIPTCOREGTK_4.1_NO_PKG_CONFIG: "1"
+        run: |
+          rustup target add armv7-unknown-linux-musleabihf
+          cargo build --release --target armv7-unknown-linux-musleabihf
 
-      - name: Upload .deb package
+      - name: Upload binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: armhf-deb-package
-          path: target/armv7-unknown-linux-gnueabihf/release/bundle/deb/*.deb
+          name: tauri-armv7-binary
+          path: src-tauri/target/armv7-unknown-linux-musleabihf/release/*
