--- a/.github/workflows/build-armhf.yml
+++ b/.github/workflows/build-armhf.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install pkg-config in container
-        run: apk add pkgconfig
+        run: apt-get update && apt-get install -y pkg-config
 
       - name: Install Node.js
         uses: actions/setup-node@v4
