--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -21,12 +21,12 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y git curl
 
-          # تحميل السكربت الرسمي
+          # تحميل أداة xc-tauri-rasp
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
           chmod +x xcompile.sh
 
-          # تشغيل البناء داخل Docker + تثبيت vite
+          # تنفيذ البناء مع تثبيت Vite + npm داخل الحاوية
           ./xcompile.sh \
             -e bookworm \
             -n my-tauri-app \
@@ -35,22 +35,11 @@ jobs:
             -t $GITHUB_WORKSPACE/output \
             --before "npm install && npm install -g vite"
 
-      - name: 🧾 List output contents
-        run: |
-          echo "📂 Checking contents of output..."
-          ls -lh $GITHUB_WORKSPACE/output || echo "⚠️ output folder not found"
+      - name: 📂 List contents of output folder
+        run: ls -lh output
 
-      - name: ❗ Fail if no .deb found
-        run: |
-          if ls $GITHUB_WORKSPACE/output/*.deb > /dev/null 2>&1; then
-            echo "✅ .deb file is ready!"
-          else
-            echo "❌ ERROR: No .deb file found in output!"
-            exit 1
-          fi
-
-      - name: 📦 Upload .deb file
+      - name: 📦 Upload output
         uses: actions/upload-artifact@v4
         with:
           name: tauri-armv7-build
-          path: output/*.deb
+          path: output
