--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -21,12 +21,10 @@ jobs:
         run: |
           sudo apt update && sudo apt install -y git curl
 
-          # تحميل أداة xc-tauri-rasp
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
           chmod +x xcompile.sh
 
-          # تنفيذ البناء مع تثبيت Vite + npm داخل الحاوية
           ./xcompile.sh \
             -e bookworm \
             -n my-tauri-app \
@@ -35,8 +33,8 @@ jobs:
             -t $GITHUB_WORKSPACE/output \
             --before "npm install && npm install -g vite"
 
-      - name: 📂 List contents of output folder
-        run: ls -lh output
+      - name: 📂 Show output files
+        run: ls -lh output || echo "output folder is missing!"
 
       - name: 📦 Upload output
         uses: actions/upload-artifact@v4
