--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -17,10 +17,9 @@ jobs:
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 🚀 Build with xc-tauri-rasp (ARMv7 - Pi Zero 2 W)
+      - name: 🚀 Build with xc-tauri-rasp (ARMv7)
         run: |
           sudo apt update && sudo apt install -y git curl
-
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
           chmod +x xcompile.sh
@@ -30,11 +29,15 @@ jobs:
             -n my-tauri-app \
             -p $GITHUB_WORKSPACE \
             -a armhf \
-            -t $GITHUB_WORKSPACE/output \
             --before "npm install && npm install -g vite"
 
+      - name: 🧩 Copy .deb manually to output
+        run: |
+          mkdir -p output
+          find . -type f -name '*.deb' -exec cp {} output/ \;
+
       - name: 📂 Show output files
-        run: ls -lh output || echo "output folder is missing!"
+        run: ls -lh output
 
       - name: 📦 Upload output
         uses: actions/upload-artifact@v4
