--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -17,9 +17,10 @@ jobs:
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 🚀 Build with xc-tauri-rasp (ARMv7)
+      - name: 🚀 Build with xc-tauri-rasp (ARMv7 - Pi Zero 2 W)
         run: |
           sudo apt update && sudo apt install -y git curl
+
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
           chmod +x xcompile.sh
@@ -29,15 +30,11 @@ jobs:
             -n my-tauri-app \
             -p $GITHUB_WORKSPACE \
             -a armhf \
-            --before "npm install && npm install -g vite"
+            -t $GITHUB_WORKSPACE/output \
+            --before "apt update && apt install -y pkg-config && npm install && npm install -g vite"
 
-      - name: 🧩 Copy .deb manually to output
-        run: |
-          mkdir -p output
-          find . -type f -name '*.deb' -exec cp {} output/ \;
-
-      - name: 📂 Show output files
-        run: ls -lh output
+      - name: 📂 List contents of output folder
+        run: ls -lh output || echo "output folder is empty"
 
       - name: 📦 Upload output
         uses: actions/upload-artifact@v4
