--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -2,8 +2,7 @@ name: Build Tauri App for Raspberry Pi ARMv7
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -17,7 +16,7 @@ jobs:
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 🚀 Build with xc-tauri-rasp (ARMv7 - Pi Zero 2 W)
+      - name: 🚀 Build with xc-tauri-rasp
         run: |
           sudo apt update && sudo apt install -y git curl
 
@@ -25,13 +24,13 @@ jobs:
           cd xc-tauri-rasp
           chmod +x xcompile.sh
 
+          # نبدأ البناء مع التنفيذ الافتراضي
           ./xcompile.sh \
             -e bookworm \
             -n my-tauri-app \
             -p $GITHUB_WORKSPACE \
             -a armhf \
-            -t $GITHUB_WORKSPACE/output \
-            --before "apt update && apt install -y pkg-config && npm install && npm install -g vite"
+            -t $GITHUB_WORKSPACE/output
 
       - name: 📂 List contents of output folder
         run: ls -lh output || echo "output folder is empty"
