--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -16,15 +16,16 @@ jobs:
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 🚀 Build with xc-tauri-rasp
+      - name: 🛠️ Prepare build script and fix pkg-config
         run: |
           sudo apt update && sudo apt install -y git curl
-
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
-          chmod +x xcompile.sh
 
-          # نبدأ البناء مع التنفيذ الافتراضي
+          # ✅ تعديل Dockerfile لإضافة pkg-config داخل الحاوية
+          sed -i '/RUN apt-get update/i RUN apt-get update && apt-get install -y pkg-config' Dockerfile
+
+          chmod +x xcompile.sh
           ./xcompile.sh \
             -e bookworm \
             -n my-tauri-app \
