--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -17,14 +17,16 @@ jobs:
       - name: 🐳 Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      - name: 🛠️ Prepare build script and patch Dockerfile
+      - name: 🚧 Patch Dockerfile + Run xc-tauri-rasp
         run: |
           sudo apt update && sudo apt install -y git curl
+
           git clone https://github.com/Shiritai/xc-tauri-rasp.git
           cd xc-tauri-rasp
 
-          # ✅ إصلاح Dockerfile: تثبيت pkg-config + nodejs + npm
-          sed -i '/apt-get update/a RUN apt-get install -y pkg-config nodejs npm' Dockerfile
+          # ✅ Inject pkg-config, nodejs, npm, vite into Dockerfile
+          sed -i '/apt-get install/a \
+            RUN apt-get install -y curl nodejs npm pkg-config && npm install -g vite' Dockerfile
 
           chmod +x xcompile.sh
           ./xcompile.sh \
@@ -36,7 +38,7 @@ jobs:
             --before "npm install"
 
       - name: 📂 List contents of output folder
-        run: ls -lh output || echo "output folder is empty"
+        run: ls -lh output || echo "❌ output folder is empty"
 
       - name: 📦 Upload output
         uses: actions/upload-artifact@v4
